# intel-8080-emu

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
src/opcode/: mod.rs  opcodes.rs
src/proc_state/: flags.rs  mod.rs  registers.rs
tests/: cpudiag.rs
